# mypy-test

./: .gitignore  README.md  pyproject.toml
examples/: bad.py  good.py
mypy_test/: __init__.py  _cli.py  _message.py  _mypy.py  _source.py
tests/: test_cli.py  test_mypy.py  test_source.py
