[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mypy_test"
dist-name = "mypy-test"
license = "MIT"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/orsinium-labs/mypy_test"
description-file = "README.md"
keywords = "mypy,testing,stubs,plugins,typing"
requires-python = ">=3.6"
requires = [
    "mypy",
    "lxml",  # for mypy to be able to produce XML reports
]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.flit.metadata.requires-extra]
test = ["pytest"]

[tool.flit.scripts]
mypy_test = "mypy_test:entrypoint"

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"

[tool.ruff]
select = [
    "E", "W", "F", "N", "B",
    "COM", "ISC", "PIE", "Q",
    "SIM", "PTH", "PL", "RUF",
]
ignore = [
    "PLR2004",  # allow hardcoded constants
    "SIM117",   # allow nested with
    "SIM105",   # allow try-except-pass
    "PIE790",   # allow unnecessary pass statements
    "PLW2901",  # allow overriding loop variable
]
target-version = "py38"
line-length = 120

[tool.ruff.flake8-quotes]
inline-quotes = "single"
